# Silnik_3d

./: BitmapHandler.cpp  BitmapHandler.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  ComplexObject.cpp  ComplexObject.hpp  Engine.cpp  Engine.cuh  Engine.hpp  GeometryRenderer.cpp  GeometryRenderer.hpp  README.md  TexturedObject.hpp  TexuredObject.cpp  main.cpp
Camera/: Camera.cpp  Camera.hpp
SceneManager/: SceneManager.cpp  SceneManager.hpp
Transform/: Transform.cpp  Transform.hpp  TransformableGeometry.cpp  TransformableGeometry.hpp  TransformableObject.cpp  TransformableObject.hpp
